# NEMA

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  REPORT.md  pyproject.toml  requirements.txt
.claude/: launch.json
.streamlit/: config.toml  secrets.toml.example
models/: backtest_metrics.json  backtest_results.parquet  catboost_h03.cbm  catboost_h12.cbm  catboost_h13.cbm  catboost_h14.cbm  catboost_h21.cbm  feature_importance.json  feature_names.json  horizon_mae.json  imputation_stats.json  model_performance.json  test_results.parquet
paper/: .gitignore  FACTS.md  PLAN.md  main.tex  main_ieee.tex  make_figures.py  references.bib
paper/sections/: .gitkeep  00_abstract.tex  01_introduction.tex  02_related_work.tex  03_data.tex  04_methodology.tex  05_experimental_setup.tex  06_results.tex  07_discussion.tex  08_limitations.tex  09_conclusion.tex
src/nema_forecast/: __init__.py  config.py
src/nema_forecast/dashboard/: app.py  components.py  live_data.py
src/nema_forecast/dashboard/pages/: diagnostics.py  executive_summary.py  how_it_works.py  live_forecast.py  model_vs_iso.py
src/nema_forecast/data/: eia.py  iso_ne.py  iso_ne_ws.py  load_source.py  open_meteo.py  preprocessing.py  weather.py
src/nema_forecast/features/: engineering.py
src/nema_forecast/model/: backtest.py  inference.py  train.py
src/nema_forecast/scripts/: __init__.py  backfill_load.py
tests/: test_data.py  test_eia.py  test_features.py  test_iso_ne_ws.py  test_open_meteo.py
